--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                         <i title="Play/Pause" class="fa fa-play clickable play-icon" aria-hidden="true"></i>
                         <i title="Next" class="fa fa-step-forward clickable" aria-hidden="true"></i>
                         <i title="Loop" class="fa fa-repeat disabled clickable" aria-hidden="true"></i>
+                        <i class="fa fa-volume-off" aria-hidden="true"></i>
+                        <i class="fa fa-volume-up" aria-hidden="true"></i>
+                        <i class="fa fa-volume-down" aria-hidden="true"></i>
                          <!-- <i class="fa fa-bar-chart clickable active" aria-hidden="true"></i> -->
 
                     </div>
